core/cu29_derive/tests/compile_fail/copper_runtime/invalid_file_path.stderr
error: Failed to read the configuration file: /path/to/config.ron
 --> tests/compile_fail/copper_runtime/invalid_file_path.rs:3:1
  |
3 | #[copper_runtime(config = "/path/to/config.ron")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `copper_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)
